<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/window_backgound"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_margin="@dimen/_20sdp"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:text="@string/verified_users"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/intro3"
                android:layout_marginTop="@dimen/_15sdp"
                android:adjustViewBounds="true"
                android:id="@+id/iv_auto_slide"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/white"
                android:text="@string/commute_with_verified_users_for_secure_and_safe_transits"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text="@string/get_notified_for_all_the_due_dates_of_documents_expiring"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text="@string/monitor_perforance_of_vehicles_and_drivers"
        />

    </LinearLayout>


</LinearLayout>