<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/registration_background_colour"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_margin="@dimen/_25sdp"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/yellow"
                    android:text="@string/transport_company_details">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textcolour"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:id="@+id/et_company_name"
                        android:textColor="@color/textcolour"
                        android:backgroundTint="@color/edittext_line_colour"
                        android:layout_height="wrap_content"
                        android:hint="@string/transport_company_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textcolour"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:textColor="@color/textcolour"
                        android:id="@+id/et_company_gst"
                        android:backgroundTint="@color/edittext_line_colour"
                        android:layout_height="wrap_content"
                        android:hint="@string/transport_company_gstin_optional" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textcolour"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textMultiLine"
                        android:textColor="@color/textcolour"
                        android:id="@+id/et_company_adress"
                        android:backgroundTint="@color/edittext_line_colour"
                        android:layout_height="wrap_content"
                        android:hint="@string/transport_company_address" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textcolour"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textMultiLine"
                        android:textColor="@color/textcolour"
                        android:id="@+id/et_company_registration"
                        android:backgroundTint="@color/edittext_line_colour"
                        android:layout_height="wrap_content"
                        android:hint="@string/transpoart_registration_number_optional" />
            </com.google.android.material.textfield.TextInputLayout>







        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <TextView android:layout_width="wrap_content"
              android:text="@string/next"
              android:background="@drawable/square"
              android:textSize="20sp"
              android:layout_alignParentEnd="true"
              android:layout_alignParentBottom="true"
              android:id="@+id/tv_next"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:layout_gravity="center"
              android:layout_margin="@dimen/_10sdp"
              android:paddingStart="30dp"
              android:textStyle="bold"
              android:drawablePadding="2dp"
              android:textAllCaps="true"
              android:paddingEnd="28dp"
              android:textColor="#252525"
              android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
              android:layout_height="wrap_content"/>
</RelativeLayout>